@@ -1,8 +1,8 @@
 Package: tolerance
 Type: Package
 Title: Functions for calculating tolerance intervals
-Version: 0.2.2
-Date: 2010-07-30
+Version: 0.2.3
+Date: 2010-10-07
 Author: Derek S. Young
 Maintainer: Derek S. Young <dsy109@stat.psu.edu>
 Depends: rgl
@@ -13,6 +13,6 @@ Description: Tolerance limits provide the limits between which we can
         Plotting is also available for tolerance limits of continuous
         random variables.
 License: GPL (>= 2)
-Packaged: Thu Jul 29 20:16:27 2010; Derek Young
+Packaged: Wed Oct 6 18:58:20 2010; Derek Young
 Repository: CRAN
-Date/Publication: 2010-07-30 00:47:27
+Date/Publication: 2010-10-07 11:27:08
